--- a/about.html
+++ b/about.html
@@ -30,20 +30,18 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="/DonewithHarry/about.html">About</a>
                     </li>
-                    <li class="nav-item dropdown">
+                      <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Topic
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Topics
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Technology</a></li>
-                            <li><a class="dropdown-item" href="#">Web Development</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Support</a></li>
-                            <li><a class="dropdown-item" href="#">Write for Us</a></li>
-                        </ul>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Technology</a>
+                            <a class="dropdown-item" href="#">Web Development</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Support</a>
+                            <a class="dropdown-item" href="#">Write for us</a>
+                        </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/DonewithHarry/contact.html">Contact Us</a>
